force-app/main/default/objects/GDPR_Breach__c/GDPR_Breach__c.object-meta.xml
<CustomObject>
    <description>GDPR Article 33/34 - Personal data breach records. Tracks breach incidents, notification deadlines, and regulatory reporting requirements.</description>
    <label>GDPR Breach</label>
    <nameField>
        <displayFormat>GBR-{0000000}</displayFormat>
        <label>Breach Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDPR Breaches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>