force-app/main/default/objects/GDPR_Breach__c/fields/Affected_Records__c.field-meta.xml
<CustomField>
    <fullName>Affected_Records__c</fullName>
    <description>Number of personal data records affected by the breach</description>
    <label>Affected Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>