force-app/main/default/objects/GDPR_Breach__c/fields/Breach_Date__c.field-meta.xml
<CustomField>
    <fullName>Breach_Date__c</fullName>
    <description>Date and time when the breach was discovered or occurred</description>
    <label>Breach Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>