force-app/main/default/objects/GDPR_Breach__c/fields/DPA_Notified__c.field-meta.xml
<CustomField>
    <fullName>DPA_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the Data Protection Authority has been notified</description>
    <label>DPA Notified</label>
    <type>Checkbox</type>
</CustomField>