force-app/main/default/objects/GDPR_Breach__c/fields/Notification_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Notification_Deadline__c</fullName>
    <description>Deadline for notifying supervisory authority (72 hours from discovery)</description>
    <label>Notification Deadline</label>
    <type>DateTime</type>
</CustomField>